last commit before refactor to mvvm